Support building with JDK9 and up (#176)
Uses JSR250 javax.annotation-api as an implementation dependency
instead of the default-off java.xml.ws.annotation module in JDK9 onwards.

Differentiates use of yield identifier from the JDK14 yield keyword.

Stops using Integer(int) constructors (deprecated in JDK9).